Changed column-gap to 5px for devices less than 500px in width. This stopped the grid from overflowing the body on smaller screens

--- a/src/assets/common.blocks/body/body.css
+++ b/src/assets/common.blocks/body/body.css
@@ -10,6 +10,19 @@
 
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto;
-    column-gap: 1rem;
+    grid-template-rows: min-content;
+    column-gap: 5px;
+}
+
+@media only screen and (min-width: 500px) {
+    .body {
+        column-gap: 20px;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+}
+
+@media only screen and (min-width: 1100px) {
+
 }
